# DUTCHess

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  mimxrt1020_evk.overlay  prj.conf  qemu_x86.overlay
boards/: mimxrt1020_evk.conf  qemu_x86.conf
pct2075/zephyr/: CMakeLists.txt  Kconfig  pct2075.c
pct2075_module/zephyr/: .Kconfig.swp  .pct2075.c.swp  CMakeLists.txt  Kconfig  pct2075.c
src/: DUTCHess.h  dut_serial.c  dut_serial.h  fs.c  fs.h  gpio.c  gpio.h  led.c  led.h  main.c  net.c  net.h  relay.c  relay.h  settings.c  settings.h  shell.c  temperature.c  temperature.h  terminal_server.c  terminal_server.h  tftp.c  tftp.h  tftp_eeprom.c  tftp_eeprom.h  web.c  web.h
